tests/test_scope/bad/cyclic_scopes.catala_en
## Article

```catala
declaration scope A:
  context b scope B
  context x content integer

declaration scope B:
  context a scope A
  context y content integer

scope A:
  definition x equals b.y

scope B:
  definition y equals a.x
```
